# OnlineLendMeYourFace

./: .gitignore  README.md  onlineStyles.css  startTerminal.sh
config/: LendMeYourFace-hk.txt  LendMeYourFace-m.txt  LendMeYourFace-nnn.txt  LendMeYourFace.txt  Win32LendMeYourFace.txt
deep-animator-demo/: hkdeep.sh  mdeep.sh  odeep.sh
lend-me-your-face-main/: .gitignore  README.md  crop-video.py  demo.py  fake-yourself.py  fake-yourself.py.ok  nnndeep.sh  odeep.sh  pyproject.toml
lend-me-your-face-main/config/: vox-adv-256.yaml  vox-adv-512.yaml
lend-me-your-face-main/data/: .gitignore
lend-me-your-face-main/modules/: dense_motion.py  discriminator.py  generator.py  keypoint_detector.py  model.py  util.py
lend-me-your-face-main/sync_batchnorm/: batchnorm.py
online/: GoFakeYourself.html  index.html  onlineStyles.css
online-nnn/: .gitignore  .htaccess  GoFakeYourself.html  index.html  nnn-onlineStyles.css
src/: LendMeYourFace.c  makefile  pbl.c  pbl.h  pblCgi.c  pblCgi.h  pblCollection.c  pblHeap.c  pblIterator.c  pblList.c  pblMap.c  pblPriorityQueue.c  pblSet.c  pblStringBuilder.c  pblhash.c  stb_image_resize.h
src-hk/: LendMeYourFace-hk.c  makefile  pblCgi.c
src-m/: LendMeYourFace-m.c  makefile
src-nnn/: .gitignore  LendMeYourFace-nnn.c  makefile  pbl.c  pbl.h  pblCgi.c  pblCgi.h  pblCollection.c  pblHeap.c  pblIterator.c  pblList.c  pblMap.c  pblPriorityQueue.c  pblSet.c  pblStringBuilder.c  pblhash.c  stb_image_resize.h
templates/: confirmUpload.html  footer.html  header.html  index.html  navigation-desktop.html  navigation-lendmeyourface.html  (+6 more)
(+22 files in other folders)
