[tool.poetry]
name = "lend-me-your-face"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
imageio = "^2.19.3"
matplotlib = "^3.5.2"
numpy = "^1.22.4"
pandas = "^1.4.2"
python-dateutil = "^2.8.2"
pytz = "^2022.1"
PyYAML = "^6.0"
scikit-image = "^0.19.3"
scikit-learn = "^1.1.1"
scipy = "^1.8.1"
torch = "^1.11.0"
#torch = { file = "torch-1.11.0+cu113-cp39-cp39-linux_x86_64.whl" }
torchvision = "^0.12.0"
tqdm = "^4.64.0"
imageio-ffmpeg = "^0.4.7"
fire = "^0.4.0"
loguru = "^0.6.0"
opencv-python = "4.5.5.64"
face-alignment = "^1.3.5"
llvmlite = "0.38.1"
numba = "0.55.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
